--- a/css/style.css
+++ b/css/style.css
@@ -191,8 +191,17 @@ section#about {
         grid-template-columns: subgrid;
         grid-template-rows: 2.8rem;
 
+
+        &>* {
+            transition: all 1.5s;
+        }
+
         & {
             grid-column: 1/9;
+        }
+
+        & :is(:hover, :focus) {
+            scale: 1.1;
         }
     }
 
